--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
+html { height: 100%; }
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  min-height:100%; 
+  position:relative; 
+  padding-bottom: 70px; 
+}
+.footer { 
+  position: absolute; 
+  left: 0;
+  right: 0;
+  bottom: 0; 
+  height: 50px; 
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.not-found{
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color:white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 100px;
 }
