--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,19 @@
-html { height: 100%; }
-body {
-  min-height:100%; 
-  position:relative; 
-  padding-bottom: 70px; 
+html {
+  height: 100%;
 }
+
+body {
+  min-height: 100%;
+  position: relative;
+  padding-bottom: 70px;
+}
+
 .footer { 
-  position: absolute; 
+  position: absolute;
   left: 0;
   right: 0;
-  bottom: 0; 
-  height: 50px; 
+  bottom: 0;
+  height: 50px;
 }
 
 .not-found{
